--- a/app/src/main/res/layout/activity_endless_play.xml
+++ b/app/src/main/res/layout/activity_endless_play.xml
@@ -8,15 +8,15 @@
     tools:context=".playActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/playTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="40dp"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="80dp"
+        android:fontFamily="@font/aldrich"
         android:text="@string/title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
+        android:textSize="45sp"
         android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/playTitle">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,24 +49,16 @@
             <Button
                 android:id="@+id/blueButton"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="110dp"
+                android:layout_width="175dp"
                 android:layout_height="175dp"
                 android:background="#3349FF" />
 
             <Button
                 android:id="@+id/redButton"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="110dp"
+                android:layout_width="175dp"
                 android:layout_height="175dp"
                 android:background="#FF4933" />
-
-            <Button
-                android:id="@+id/pinkButton"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="110dp"
-                android:layout_height="175dp"
-                android:layout_weight="1"
-                android:background="#FF33DA" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,46 +71,57 @@
             <Button
                 android:id="@+id/greenButton"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="110dp"
-                android:layout_height="match_parent"
+                android:layout_width="175dp"
+                android:layout_height="175dp"
                 android:background="#33FF46" />
 
             <Button
                 android:id="@+id/yellowButton"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="110dp"
+                android:layout_width="175dp"
                 android:layout_height="175dp"
                 android:background="#D7FF33" />
-
-            <Button
-                android:id="@+id/cyanButton"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="110dp"
-                android:layout_height="175dp"
-                android:layout_weight="1"
-                android:background="#33FFE4" />
-
         </LinearLayout>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/startButton"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginBottom="125dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginBottom="26dp"
         android:background="@drawable/button_pressed"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:fontFamily="@font/aldrich"
         android:gravity="center"
         android:text="@string/start"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/scoreNum"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/backButton"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="26dp"
+        android:background="@drawable/button_pressed"
+        android:fontFamily="@font/aldrich"
+        android:gravity="center"
+        android:text="@string/back"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toTopOf="@+id/scoreNum"
+        app:layout_constraintEnd_toStartOf="@+id/startButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
@@ -126,15 +129,15 @@
         android:id="@+id/scoreNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="30dp"
+        android:fontFamily="@font/aldrich"
         android:text="@string/scoreNum"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startButton"
-        tools:text="Score: 0" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        tools:text="score: 0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
