--- a/app/src/main/res/layout/activity_high_score.xml
+++ b/app/src/main/res/layout/activity_high_score.xml
@@ -29,11 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/button_pressed"
-            android:fontFamily="@font/holtwood_one_sc"
+            android:fontFamily="@font/aldrich"
             android:text="@string/standard"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/endlessScoreButton"
@@ -42,11 +42,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/button_pressed"
-            android:fontFamily="@font/holtwood_one_sc"
+            android:fontFamily="@font/aldrich"
             android:text="@string/endless"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/black"
-            android:textSize="12sp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,7 +55,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="90dp"
@@ -74,22 +74,26 @@
             <TextView
                 android:id="@+id/playerName"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/holtwood_one_sc"
+                android:fontFamily="@font/aldrich"
                 android:gravity="center_horizontal"
                 android:text="@string/player"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/playerHighScore"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/holtwood_one_sc"
+                android:fontFamily="@font/aldrich"
                 android:gravity="center_horizontal"
                 android:text="@string/highscore"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -243,15 +247,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/button_pressed"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:fontFamily="@font/aldrich"
         android:text="@string/back"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
-        android:textSize="12sp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.278"
+        app:layout_constraintHorizontal_bias="0.257"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.346" />
@@ -267,11 +272,11 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_pressed"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:fontFamily="@font/aldrich"
         android:text="@string/reset_scores"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
-        android:textSize="12sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.142"
