--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
     tools:context=".playActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/playTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="40dp"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="80dp"
+        android:fontFamily="@font/aldrich"
         android:text="@string/title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
+        android:textSize="45sp"
         android:typeface="sans"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/playTitle">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,7 +96,7 @@
         android:layout_marginRight="48dp"
         android:layout_marginBottom="26dp"
         android:background="@drawable/button_pressed"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:fontFamily="@font/aldrich"
         android:gravity="center"
         android:text="@string/start"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -116,7 +116,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="26dp"
         android:background="@drawable/button_pressed"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:fontFamily="@font/aldrich"
         android:gravity="center"
         android:text="@string/back"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -131,13 +131,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="30dp"
-        android:fontFamily="@font/holtwood_one_sc"
+        android:fontFamily="@font/aldrich"
         android:text="@string/scoreNum"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        tools:text="Score: 0" />
+        tools:text="score: 0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
